Fix `BaseRepository` to use `getFirst` method for improved readability and optional handling
Signed-off-by: Philipp Borkovic <philipp.borkovic@edu.htl-villach.at>